fix scrollbar on android with dark theme: there shouldn't be any

--- a/css/dark/design-dark-common.css
+++ b/css/dark/design-dark-common.css
@@ -20,11 +20,10 @@ html {
     scrollbar-dark-shadow-color: #646464;
   }
   
-  ::-webkit-scrollbar { width: 8px; height: 3px;}
   ::-webkit-scrollbar-button {  height: 0px; background-color: #666; }
   ::-webkit-scrollbar-track {  background-color: #646464;}
   ::-webkit-scrollbar-track-piece { background-color: #22252f;}
-  ::-webkit-scrollbar-thumb { height: 1px; background-color: #666; }
+  ::-webkit-scrollbar-thumb { height: 0px; background-color: #666; }
   ::-webkit-scrollbar-corner { background-color: #646464;}
   ::-webkit-resizer { background-color: #666;}
 
